# whooing-api

./: README.md  pyproject.toml
tests/: app_test.py  category_test.py  parser_test.py  shcard_parser_test.py
tests/fixtures/: naverpay-aladin.txt  naverpay-bus.txt  naverpay-card.html  naverpay-gs25.txt  naverpay-offline.html  naverpay-shopping.txt  naverpay-tax.html  naverpay-wetax.txt  naverpay.html  navershopping.html
whooing_api/: __init__.py  api.py  category_table.py  parser.py  settings.py  utils.py  whooing.py
whooing_api/parser/: __init__.py  hdcard.py  kbbank.py  naverpay_parser.py  shbank_parser.py  shcard.py  shcard_parser.py  shdebit.py  shdebit_parser.py  utils.py
